# CS111Winter2019

./: .travis.yml  BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  Config  ConstantIntegrator.cpp  ConstantIntegrator.h  DirichletBC.cpp  DirichletBC.h  Domain.cpp  Domain.h  Edge.cpp  Edge.h  EigenSolver.cpp  EigenSolver.h  Element.cpp  Element.h  EnergyFunction.h  Equation.h  Integrator.cpp  Integrator.h  LapackSolver.cpp  LapackSolver.h  LaplaceEnergyFunction.cpp  LaplaceEnergyFunction.h  Main.cpp  Makefile  Matrix.h  Mesh.cpp  Mesh.h  Meshgenerator.cpp  Meshgenerator.h  Multiindex.cpp  Multiindex.h  Node.cpp  Node.h  Polynomial.cpp  Polynomial.h  PolynomialShapeFunction.cpp  PolynomialShapeFunction.h  (+14 more)
Domain/: CMakeLists.txt
Domain/include/: Element.h  Mesh.h  Node.h  Simplex.h
Domain/src/: Domain.cpp  Edge.cpp  Mesh.cpp  Simplex.cpp
Equation/: CMakeLists.txt
Equation/include/: BoundaryCondition.h  Equation.h
Equation/src/: Equation.cpp  LaplaceEnergyFunction.cpp  SourceFunction.cpp  TestSourceFunction.cpp
Equation/unit_test/: CMakeLists.txt
Helper/: CMakeLists.txt
Helper/include/: Meshgenerator.h  Multiindex.h  Polynomial.h  Vector.h
Helper/src/: Multiindex.cpp
Helper/unit_test/: CMakeLists.txt  Testframe.cpp
Io/: CMakeLists.txt
Io/unit_test/: CMakeLists.txt
Solver/: CMakeLists.txt
Solver/include/: ConstantIntegrator.h  LapackSolver.h  PolynomialShapeFunction.h
Solver/src/: Integrator.cpp  LapackSolver.cpp  ShapeFunction.cpp
eigen/.hg/: dirstate
eigen/.hg/cache/: branch2-served  hgtagsfnodes1
eigen/.hg/store/: 00changelog.d  00changelog.i  00manifest.i  undo
eigen/.hg/store/data/_eigen/src/_core/arch/_g_p_u/: _packet_math_half.h.i
eigen/.hg/store/data/_eigen/src/_core/util/: _macros.h.d
results/: Visualization.m
